src/main/java/lois/lab1/parser/output/LogicLanguageParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g 2012-10-04 10:31:31

    package lois.lab1.parser.output;

	import lois.lab1.datastructure.TreeNode;
    import lois.lab1.datastructure.Variable;
	import lois.lab1.datastructure.Constant;
	import lois.lab1.datastructure.AtomSign;
	import lois.lab1.datastructure.Predicate;
	import lois.lab1.datastructure.Rule;
	import lois.lab1.datastructure.SimilarityRelation;
	import lois.lab1.datastructure.Goal;
	import lois.lab1.datastructure.KnowledgeBase;
    import lois.lab1.inference.Solver;


    import org.antlr.runtime.*;

    import java.io.File;
    import java.io.FileNotFoundException;
    import java.io.FileOutputStream;
    import java.io.FileWriter;
    import java.io.IOException;
    import java.io.InputStream;
    import java.io.OutputStream;
    import java.util.List;
import java.util.ArrayList;

public class LogicLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOWER_SYMBOL", "UPPER_SYMBOL", "COMMENT", "WS", "'<-'", "'.'", "'('", "','", "')'", "';'", "'?'"
    };
    public static final int WS=7;
    public static final int T__12=12;
    public static final int UPPER_SYMBOL=5;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int LOWER_SYMBOL=4;
    public static final int COMMENT=6;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__8=8;

    // delegates
    // delegators


        public LogicLanguageParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LogicLanguageParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);

        }


    public String[] getTokenNames() { return LogicLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g"; }



    	private static List<String> errorList = new ArrayList<String>();

    	private int errorLine;

    	private static Goal goal;

        public static void main(String[] args) throws Exception {

    		//String baseFile = args[0];
        	String baseFile = "knowledgeBase/knowledgeBase_0.txt";
        	//String goalFile = args[1];
        	String goalFile = "knowledgeBase/goal_0.txt";

            List<String> argumentsList = new ArrayList<String>();
            for (String arg : args) {
                argumentsList.add(arg);
            }

            boolean isShowTree = argumentsList.contains("-t");
            boolean isInFile = argumentsList.contains("-f");

    		//CharStream input = new ANTLRFileStream(args[0]);
    		LogicLanguageLexer lexer = new LogicLanguageLexer(new ANTLRFileStream(baseFile));
            LogicLanguageParser parser = new LogicLanguageParser(new CommonTokenStream(lexer));
            parser.base();

            lexer = new LogicLanguageLexer(new ANTLRFileStream(goalFile));
            parser = new LogicLanguageParser(new CommonTokenStream(lexer));
            parser.goal();

            if (!errorList.isEmpty()) {
            	System.out.println("Next errors was found: ");

                for (String error : errorList) {
                	System.out.println(error);
                }
            } else {
                Solver solver = new Solver(KnowledgeBase.getInstance());
                List<TreeNode> solutionList = solver.solve(goal);

                for (TreeNode rootNode : solutionList) {
                    String resultTable = rootNode.getRelationTable().printRelationTable();
                    String tree = rootNode.printInferenceTree();

                    showResult(resultTable, tree, isInFile, isShowTree);
                }
           	}
       	}

        private static void showResult(
            String resultTable, String tree, boolean isInFile, boolean isShowTree) throws IOException {

            if (isInFile) {
                File outputFile = new File("output.txt");
                FileWriter writer = new FileWriter(outputFile);
                writer.write("------------Result----------- \n\n");
                writer.write(resultTable);
                if (isShowTree) {
                    writer.write("\n\n\n");
                    writer.write("--------------Inference tree------------- \n\n");
                    writer.write(tree);
                }
                writer.close();
            }
            else {
                System.out.println("--------------Result---------------\n");
                System.out.println(resultTable);
                if (isShowTree) {
                    System.out.println("\n---------------------Inference tree------------------ \n");
                    System.out.println(tree);
                }
            }
        }

        public String getErrorHeader(RecognitionException e) {
            errorLine = e.line;
            return "";
        }

        public void emitErrorMessage(String message) {
            errorList.add("line " + errorLine + ": " + message);
        }



    // $ANTLR start "base"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:72:1: base : factList ( ruleList )? ;
    public final void base() throws RecognitionException {
        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:73:2: ( factList ( ruleList )? )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:73:4: factList ( ruleList )?
            {
            pushFollow(FOLLOW_factList_in_base48);
            factList();

            state._fsp--;

            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:73:13: ( ruleList )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==UPPER_SYMBOL) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:73:13: ruleList
                    {
                    pushFollow(FOLLOW_ruleList_in_base50);
                    ruleList();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "base"


    // $ANTLR start "factList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:76:1: factList : fact ( fact )* ;
    public final void factList() throws RecognitionException {
        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:77:2: ( fact ( fact )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:77:4: fact ( fact )*
            {
            pushFollow(FOLLOW_fact_in_factList63);
            fact();

            state._fsp--;

            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:77:9: ( fact )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:77:9: fact
            	    {
            	    pushFollow(FOLLOW_fact_in_factList65);
            	    fact();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "factList"


    // $ANTLR start "ruleList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:80:1: ruleList : first= rule (second= rule )* ;
    public final void ruleList() throws RecognitionException {
        Rule first = null;

        Rule second = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:81:2: (first= rule (second= rule )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:81:4: first= rule (second= rule )*
            {
            pushFollow(FOLLOW_rule_in_ruleList80);
            first=rule();

            state._fsp--;

             KnowledgeBase.getInstance().addRule(first);
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:83:2: (second= rule )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==UPPER_SYMBOL) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:83:3: second= rule
            	    {
            	    pushFollow(FOLLOW_rule_in_ruleList92);
            	    second=rule();

            	    state._fsp--;

            	     KnowledgeBase.getInstance().addRule(second);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ruleList"


    // $ANTLR start "rule"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:86:1: rule returns [Rule object] : predicateTerm '<-' predicateTermList '.' ;
    public final Rule rule() throws RecognitionException {
        Rule object = null;

        Predicate predicateTerm1 = null;

        List<Predicate> predicateTermList2 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:87:2: ( predicateTerm '<-' predicateTermList '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:87:4: predicateTerm '<-' predicateTermList '.'
            {
            pushFollow(FOLLOW_predicateTerm_in_rule112);
            predicateTerm1=predicateTerm();

            state._fsp--;

            match(input,8,FOLLOW_8_in_rule114);
            pushFollow(FOLLOW_predicateTermList_in_rule116);
            predicateTermList2=predicateTermList();

            state._fsp--;

            match(input,9,FOLLOW_9_in_rule118);
             object = new Rule(predicateTerm1, predicateTermList2);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return object;
    }
    // $ANTLR end "rule"


    // $ANTLR start "fact"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:90:1: fact returns [Predicate object] : ( predicateFact | similarityRelation );
    public final Predicate fact() throws RecognitionException {
        Predicate object = null;

        Predicate predicateFact3 = null;

        SimilarityRelation similarityRelation4 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:91:2: ( predicateFact | similarityRelation )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==UPPER_SYMBOL) ) {
                alt4=1;
            }
            else if ( (LA4_0==LOWER_SYMBOL) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:91:4: predicateFact
                    {
                    pushFollow(FOLLOW_predicateFact_in_fact135);
                    predicateFact3=predicateFact();

                    state._fsp--;

                     KnowledgeBase.getInstance().addPredicate(predicateFact3);

                    }
                    break;
                case 2 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:92:4: similarityRelation
                    {
                    pushFollow(FOLLOW_similarityRelation_in_fact142);
                    similarityRelation4=similarityRelation();

                    state._fsp--;

                     KnowledgeBase.getInstance().addSimilarityRelation(similarityRelation4);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return object;
    }
    // $ANTLR end "fact"


    // $ANTLR start "similarityRelation"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:95:1: similarityRelation returns [SimilarityRelation object] : similarityName similarityPair '.' ;
    public final SimilarityRelation similarityRelation() throws RecognitionException {
        SimilarityRelation object = null;

        String similarityName5 = null;

        LogicLanguageParser.similarityPair_return similarityPair6 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:96:2: ( similarityName similarityPair '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:96:4: similarityName similarityPair '.'
            {
            pushFollow(FOLLOW_similarityName_in_similarityRelation160);
            similarityName5=similarityName();

            state._fsp--;

            pushFollow(FOLLOW_similarityPair_in_similarityRelation162);
            similarityPair6=similarityPair();

            state._fsp--;

            match(input,9,FOLLOW_9_in_similarityRelation164);
             object = new SimilarityRelation(similarityName5, (similarityPair6!=null?similarityPair6.firstObject:null), (similarityPair6!=null?similarityPair6.secondObject:null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return object;
    }
    // $ANTLR end "similarityRelation"

    public static class similarityPair_return extends ParserRuleReturnScope {
        public AtomSign firstObject;
        public AtomSign secondObject;
    };

    // $ANTLR start "similarityPair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:100:1: similarityPair returns [AtomSign firstObject, AtomSign secondObject] : ( predicateNamePair | constantPair );
    public final LogicLanguageParser.similarityPair_return similarityPair() throws RecognitionException {
        LogicLanguageParser.similarityPair_return retval = new LogicLanguageParser.similarityPair_return();
        retval.start = input.LT(1);

        LogicLanguageParser.predicateNamePair_return predicateNamePair7 = null;

        LogicLanguageParser.constantPair_return constantPair8 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:101:2: ( predicateNamePair | constantPair )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==10) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==LOWER_SYMBOL) ) {
                    alt5=2;
                }
                else if ( (LA5_1==UPPER_SYMBOL) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:101:4: predicateNamePair
                    {
                    pushFollow(FOLLOW_predicateNamePair_in_similarityPair184);
                    predicateNamePair7=predicateNamePair();

                    state._fsp--;


                    		retval.firstObject = new Predicate((predicateNamePair7!=null?predicateNamePair7.firstName:null));
                    		retval.secondObject = new Predicate((predicateNamePair7!=null?predicateNamePair7.secondName:null));


                    }
                    break;
                case 2 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:106:4: constantPair
                    {
                    pushFollow(FOLLOW_constantPair_in_similarityPair194);
                    constantPair8=constantPair();

                    state._fsp--;

                     retval.firstObject = (constantPair8!=null?constantPair8.firstObject:null); retval.secondObject = (constantPair8!=null?constantPair8.secondObject:null);

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "similarityPair"

    public static class predicateNamePair_return extends ParserRuleReturnScope {
        public String firstName;
        public String secondName;
    };

    // $ANTLR start "predicateNamePair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:109:1: predicateNamePair returns [String firstName, String secondName] : '(' first= predicateName ',' second= predicateName ')' ;
    public final LogicLanguageParser.predicateNamePair_return predicateNamePair() throws RecognitionException {
        LogicLanguageParser.predicateNamePair_return retval = new LogicLanguageParser.predicateNamePair_return();
        retval.start = input.LT(1);

        String first = null;

        String second = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:110:2: ( '(' first= predicateName ',' second= predicateName ')' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:110:4: '(' first= predicateName ',' second= predicateName ')'
            {
            match(input,10,FOLLOW_10_in_predicateNamePair212);
            pushFollow(FOLLOW_predicateName_in_predicateNamePair216);
            first=predicateName();

            state._fsp--;

            match(input,11,FOLLOW_11_in_predicateNamePair218);
            pushFollow(FOLLOW_predicateName_in_predicateNamePair222);
            second=predicateName();

            state._fsp--;

            match(input,12,FOLLOW_12_in_predicateNamePair224);
             retval.firstName = first; retval.secondName = second;

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "predicateNamePair"

    public static class constantPair_return extends ParserRuleReturnScope {
        public Constant firstObject;
        public Constant secondObject;
    };

    // $ANTLR start "constantPair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:113:1: constantPair returns [Constant firstObject, Constant secondObject] : '(' first= constant ',' second= constant ')' ;
    public final LogicLanguageParser.constantPair_return constantPair() throws RecognitionException {
        LogicLanguageParser.constantPair_return retval = new LogicLanguageParser.constantPair_return();
        retval.start = input.LT(1);

        Constant first = null;

        Constant second = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:114:2: ( '(' first= constant ',' second= constant ')' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:114:4: '(' first= constant ',' second= constant ')'
            {
            match(input,10,FOLLOW_10_in_constantPair242);
            pushFollow(FOLLOW_constant_in_constantPair246);
            first=constant();

            state._fsp--;

            match(input,11,FOLLOW_11_in_constantPair248);
            pushFollow(FOLLOW_constant_in_constantPair252);
            second=constant();

            state._fsp--;

            match(input,12,FOLLOW_12_in_constantPair254);
             retval.firstObject = first; retval.secondObject = second;

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "constantPair"


    // $ANTLR start "predicateFact"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:118:1: predicateFact returns [Predicate object] : predicateName '(' constList ')' '.' ;
    public final Predicate predicateFact() throws RecognitionException {
        Predicate object = null;

        String predicateName9 = null;

        List<Constant> constList10 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:119:2: ( predicateName '(' constList ')' '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:119:4: predicateName '(' constList ')' '.'
            {
            pushFollow(FOLLOW_predicateName_in_predicateFact275);
            predicateName9=predicateName();

            state._fsp--;

            match(input,10,FOLLOW_10_in_predicateFact277);
            pushFollow(FOLLOW_constList_in_predicateFact279);
            constList10=constList();

            state._fsp--;

            match(input,12,FOLLOW_12_in_predicateFact281);
            match(input,9,FOLLOW_9_in_predicateFact283);
             object = new Predicate(predicateName9, constList10);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return object;
    }
    // $ANTLR end "predicateFact"


    // $ANTLR start "constList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:122:1: constList returns [List<Constant> list] : first= constant ( ',' second= constant )* ;
    public final List<Constant> constList() throws RecognitionException {
        List<Constant> list = null;

        Constant first = null;

        Constant second = null;


         list = new ArrayList<Constant>();
        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:124:2: (first= constant ( ',' second= constant )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:124:4: first= constant ( ',' second= constant )*
            {
            pushFollow(FOLLOW_constant_in_constList308);
            first=constant();

            state._fsp--;

             list.add(first);
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:124:49: ( ',' second= constant )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==11) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:124:50: ',' second= constant
            	    {
            	    match(input,11,FOLLOW_11_in_constList313);
            	    pushFollow(FOLLOW_constant_in_constList317);
            	    second=constant();

            	    state._fsp--;

            	     list.add(second);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return list;
    }
    // $ANTLR end "constList"


    // $ANTLR start "predicateTermList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:127:1: predicateTermList returns [List<Predicate> list] : first= predicateTerm ( ';' second= predicateTerm )* ;
    public final List<Predicate> predicateTermList() throws RecognitionException {
        List<Predicate> list = null;

        Predicate first = null;

        Predicate second = null;


         list = new ArrayList<Predicate>();
        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:129:2: (first= predicateTerm ( ';' second= predicateTerm )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:129:4: first= predicateTerm ( ';' second= predicateTerm )*
            {
            pushFollow(FOLLOW_predicateTerm_in_predicateTermList345);
            first=predicateTerm();

            state._fsp--;

             list.add(first);
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:129:54: ( ';' second= predicateTerm )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==13) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:129:55: ';' second= predicateTerm
            	    {
            	    match(input,13,FOLLOW_13_in_predicateTermList350);
            	    pushFollow(FOLLOW_predicateTerm_in_predicateTermList354);
            	    second=predicateTerm();

            	    state._fsp--;

            	     list.add(second);

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return list;
    }
    // $ANTLR end "predicateTermList"


    // $ANTLR start "predicateTerm"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:132:1: predicateTerm returns [Predicate object] : predicateName '(' argumentList ')' ;
    public final Predicate predicateTerm() throws RecognitionException {
        Predicate object = null;

        String predicateName11 = null;

        List<AtomSign> argumentList12 = null;


        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:133:2: ( predicateName '(' argumentList ')' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\LogicLanguage.g:133:4: predicateName '(' argumentList ')'
            {
